welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: '=' expected but ';' found.
    for (i <- 1 to 2){
^